--- a/MobileWebsite/package.json
+++ b/MobileWebsite/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MobileWebsite",
+  "name": "mobilewebsite",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -23,5 +23,9 @@
   },
   "jest": {
     "preset": "react-native"
-  }
+  },
+  "main": "index.js",
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
