--- a/MobileWebsite/package.json
+++ b/MobileWebsite/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "react": "16.8.3",
+    "react-credit-card-input": "^1.1.5",
     "react-native": "0.59.9",
     "react-native-dropdown-menu": "^2.0.0",
     "react-native-elements": "^1.1.0",
