--- a/MobileWebsite/package.json
+++ b/MobileWebsite/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "16.8.3",
     "react-credit-card-input": "^1.1.5",
+    "react-dom": "^16.8.6",
     "react-native": "0.59.9",
     "react-native-dropdown-menu": "^2.0.0",
     "react-native-elements": "^1.1.0",
@@ -16,7 +17,8 @@
     "react-native-material-dropdown": "^0.11.1",
     "react-native-navigation": "^2.22.1",
     "react-native-vector-icons": "^6.6.0",
-    "react-navigation": "^3.11.0"
+    "react-navigation": "^3.11.0",
+    "styled-components": "^4.3.2"
   },
   "devDependencies": {
     "@babel/core": "7.4.5",
